--- a/HullPixelbotCode/HullPixelbotCode/MainWindow.xaml
+++ b/HullPixelbotCode/HullPixelbotCode/MainWindow.xaml
@@ -5,19 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HullPixelbotCode"
         mc:Ignorable="d"
-        Title="MainWindow" Loaded="Window_Loaded" Height="532">
+        Title="MainWindow" Loaded="Window_Loaded" Height="532" SizeToContent="WidthAndHeight">
     <StackPanel VerticalAlignment="Center" Margin="10">
         <TextBlock FontSize="20" Text="HullPixelbot Code Editor" HorizontalAlignment="Center" Margin="10"></TextBlock>
         <TextBlock Text="Program Code" Margin="10"></TextBlock>
         <TextBox Name="codeEditTextBox" Text="Code goes here" AcceptsReturn="True" Height="157" Margin="0,0,0.4,0" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto"></TextBox>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Name="loadButton" Content="Load" Click="loadButton_Click" Padding="5" Margin="10"></Button>
+            <Button Name="saveButton" Content="Save" Click="saveButton_Click" Padding="5" Margin="10"></Button>
+            <Button Name="sendButton" Content="Send" Click="sendButton_Click" Padding="5" Margin="10"></Button>
+        </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10">
-            <Button Name="loadButton" Content="Load" Click="loadButton_Click" Margin="10"></Button>
-            <Button Name="saveButton" Content="Save" Click="saveButton_Click" Margin="10"></Button>
-            <Button Name="sendButton" Content="Send" Click="sendButton_Click" Margin="10"></Button>
-            <ComboBox Name="portsComboBox"></ComboBox>
-            <Button Name="refreshPortsButton" Content="Refresh" Click="refershPortsButton_Click" Margin="10"></Button>
+            <ComboBox Name="portsComboBox">  </ComboBox>
+            <Button Name="refreshPortsButton" Content="Refresh" Click="refershPortsButton_Click" Padding="5" Margin="10"></Button>
+            <Button Name="connectButton" Content="Connect" Click="connectButton_Click" Padding="5" Margin="10"></Button>
+            <Button Name="disconnectButton" Content="Disconnect" Click="disconnectButton_Click" Padding="5" Margin="10"></Button>
         </StackPanel>
         <TextBlock Text="Serial Comms"></TextBlock>
-        <TextBlock Name="serialDataTextBlock" Height="100" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ></TextBlock>
+        <TextBox IsReadOnly="True" Name="serialDataTextBox" Height="100" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ></TextBox>
+        <Button Name="clearButton" Content="Clear" Click="clearButton_Click" Padding="5" Margin="10"></Button>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Name="stopButton" Content="Stop Program" Click="stopButtonClick" Padding="5" Margin="10"></Button>
+            <Button Name="startButton" Content="Start Program" Click="startButtonClick" Padding="5" Margin="10"></Button>
+            <Button Name="pauseButton" Content="Pause Program" Click="pauseButtonClick" Padding="5" Margin="10"></Button>
+            <Button Name="resumeButton" Content="Resume Program" Click="resumeButtonClick" Padding="5" Margin="10"></Button>
+        </StackPanel>
     </StackPanel>
 </Window>
